	* configure.ac: Add maintainer mode, create Makefiles in
	  testsuite/ tree, improve --with-libunwind configuration
	  to accept non-standard install path.
	* Makefile.am: Don't distribute autogen.sh and .gitignore.
	  Remove config.h.in during 'make maintainer-clean'
	* .gitignore: Exclude test suite build/run artifacts.

2010-11-03  Petr Machata  <pmachata@redhat.com>

	* configure.ac: Don't assume that libelf comes with a .pc file.

2010-10-31  Joe Damato <ice799@gmail.com>

    * Makefile.am: Add autotool support for libunwind.
    * configure.ac: Ditto.
    * common.h: New structure fields for libunwind.
    * execute_program.c: Initialize libunwind.
    * proc.c: Ditto.
    * options.c: New command line option (-w).
    * options.h: New options parameter for libunwind.
    * output.c: Use libunwind to do backtraces.

2010-10-18  Petr Machata <pmachata@redhat.com>

    * sysdeps/linux-gnu/s390/trace.c: Support 5th argument fetching on s390.
      Contributed by Supriya Kannery.
    * sysdeps/linux-gnu/s390/arch.h: Add support for fork/exec on 390.
    * output.c: Cleanup.

2010-10-14  Petr Machata <pmachata@redhat.com>

    * ltrace.1: Remove claim that only 32-bit binaries are supported.
    * testsuite/ltrace.minor/trace-fork.exp: Make fork test suite more accurate

2010-10-08  Edgar E. Iglesias  <edgar@axis.com>

	* sysdeps/linux-gnu/cris/Makefile: New.
	* sysdeps/linux-gnu/cris/arch.h: Ditto.
	* sysdeps/linux-gnu/cris/plt.c: Ditto.
	* sysdeps/linux-gnu/cris/ptrace.h: Ditto.
	* sysdeps/linux-gnu/cris/regs.c: Ditto.
	* sysdeps/linux-gnu/cris/signalent.h: Ditto.
	* sysdeps/linux-gnu/cris/syscallent.h: Ditto.
	* sysdeps/linux-gnu/cris/trace.c: Ditto.

2010-10-08  Zach Welch <zwelch@codesourcery.com>

	* Ensure Thumb mode gets set correct when updating ARM PC.

2010-10-08  Zach Welch <zwelch@codesourcery.com>

	* Allow ARM PLT lookups to work when containing Thumb stubs.

2010-10-07  Zach Welch <zwelch@codesourcery.com>
