@@ -11,6 +11,12 @@
 
 2010-11-03  Petr Machata  <pmachata@redhat.com>
 
+	* testsuite/ltrace.main/parameters.* (func_float): now returns
+	float to test proper decoding of float return values.
+	(func_double): new function similar to func_float.
+
+2010-11-03  Petr Machata  <pmachata@redhat.com>
+
 	* configure.ac: Don't assume that libelf comes with a .pc file.
 
 2010-10-31  Joe Damato <ice799@gmail.com>
